Closer to responsive

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <!-- The app selector is the body -->
 </body>
 </html>
